
[package]
name = "blocking"
version = "0.1.0"
authors = ["joerg84 <joerg.schad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = { version = "0.4", features = ["reqwest_blocking"], default-features = false }
anyhow = "1"
maybe-async = "0.2"

[features]
default = [ "rocksdb", "reqwest_async" ]
blocking = [ "maybe-async/is_sync" ]
reqwest_async = [ "reqwest" ]
reqwest_blocking = [ "reqwest/blocking", "blocking" ]
cluster = [ ]
enterprise = [ ]
mmfiles = [ ]
rocksdb = [ ]
arango3_7 = [ ]

[dependencies.reqwest]
version = "0.10.4"
features = [ "gzip", "json" ]
optional = true

